--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "^1.0.7",
-    "@types/fs-extra": "^11.0.4"
-  },
-  "dependencies": {
-    "fs-extra": "^11.2.0"
+    "@types/fs-extra": "^11.0.4",
+    "fs-extra": "^11.0.4",
+    "marked": "^12.0.1"
   }
 }
