--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "build:submodule": "bun --bun run remove_scripts.ts"
+  },
   "devDependencies": {
     "@types/bun": "^1.0.7",
     "@types/fs-extra": "^11.0.4",
